--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h2>Jogo da Velha</h2>
-    <div class="container">
+    <div id="container">
         <div onclick="mark(this)"></div>
         <div onclick="mark(this)"></div>
         <div onclick="mark(this)"></div>
